<resources>
    <string name="app_name">Runner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="enter_email">Enter your e-mail</string>
    <string name="enter_password">Enter your password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create account</string>
    <string name="email">E-mail adress</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="nickname">Name Surname</string>
    <string name="already_registered">Already registered?</string>
</resources>
