<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SingUpActivity">

    <EditText
        android:id="@+id/sign_up_fullname_et"
        android:hint="@string/nickname"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <EditText
        android:id="@+id/sign_up_email_et"
        android:hint="@string/email"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/sign_up_fullname_et"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/sign_up_password_et"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/sign_up_email_et"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/sign_up_btn"
        android:text="@string/sign_up"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/sign_up_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sign_up_already_registered_btn"
        android:text="@string/already_registered"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
